--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "angular-route": "^1.5.7",
-    "angular": "^1.5.7"
+    "angular": "^1.5.7",
+    "angular-bootstrap": "^2.2.0",
+    "bootstrap": "^3.3.7"
   }
 }
